# ndt_manager

./: .env.example  .gitignore  Makefile  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.cfg
certificates/: admin.py  models.py  urls.py  views.py
certificates/migrations/: 0001_initial.py  0002_certificate_method_alter_certificate_finish_date_and_more.py  0002_certificate_method_alter_certificate_level_and_more.py  0003_alter_certificate_finish_date_and_more.py  0003_alter_certificate_number_alter_certificate_owner.py  0004_alter_certificate_finish_date_and_more.py  0005_alter_certificate_finish_date.py  0006_alter_certificate_finish_date.py  0007_alter_certificate_level.py  0008_alter_certificate_level_alter_certificate_method.py  0009_alter_certificate_number.py  0010_alter_certificate_level_alter_certificate_method.py
equipment/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
equipment/migrations/: 0001_initial.py  0002_auto_20230125_1215.py  0002_auto_20230127_2059.py  0003_auto_20230125_1223.py  0003_auto_20230126_1957.py  0003_rename_registr_num_equipment_register_num.py  0004_auto_20230128_2126.py  0005_auto_20230128_2127.py  0006_auto_20230128_2131.py  0007_alter_equipment_last_repair_date.py  0008_alter_equipment_name_alter_equipment_register_num.py  0009_alter_equipment_equipment_type.py
equiptypes/: admin.py  apps.py  models.py  urls.py  views.py
equiptypes/migrations/: 0001_initial.py  0002_auto_20230128_2131.py  0003_alter_equiptype_name.py
fixtures/: one_user.json  users.json
ndt_manager/: apps.py  asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
ndt_manager/templates/: base.html  index.html
reports/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_alter_report_station.py  0002_remove_report_name_report_parts_names_and_more.py  0004_report_station.py  (+5 more)
stations/: admin.py  apps.py  models.py  urls.py  views.py
users/: apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+43 files in other folders)
