[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
python-dotenv = "^0.21.1"
django-bootstrap4 = "^22.3"
django-filter = "^22.1"
django-extensions = "^3.2.1"
dj-database-url = "^1.2.0"
[tool.poetry.dev-dependencies]
