[tool.poetry]
name = "ndt_manager"
version = "0.1.0"
description = "NDT Manager"
authors = ["DzmitrySha <ravenbydev@gmail.com>"]
readme = "README.md"
packages = [
  { include = "ndt_manager" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
python-dotenv = "^0.21.1"
django-bootstrap4 = "^22.3"
django-filter = "^22.1"
django-extensions = "^3.2.1"
dj-database-url = "^1.2.0"
rollbar = "^0.16.3"
whitenoise = "^6.3.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
django = "^4.1.5"
django-select2 = "^8.0.0"
django-redis = "^5.2.0"
django-bootstrap-datepicker-plus = "^5.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
ndt_manager = "manage.py:main"
